Zeus.Dsp/Wdsp/NativeMethods.cs


    // meter.h:67 — returns a dBm value from RXA's internal meter ring. `mt` is
    // the rxaMeterType ordinal: 0 = RXA_S_PK, 1 = RXA_S_AV (what the S-meter
    // uses), 2 = RXA_ADC_PK, … See Thetis console/dsp.cs:876-884 for the full
    // enum. Thread-safe — WDSP holds a per-meter CRITICAL_SECTION internally.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double GetRXAMeter(int channel, int mt);

    // TXA side. Indices per Thetis TXA.h:49-68 txaMeterType — MIC_AV=1,
    // EQ_AV=3, LVLR_AV=5, LVLR_GAIN=6, CFC_AV=8, CFC_GAIN=9, COMP_AV=11,
    // ALC_AV=13, ALC_GAIN=14, OUT_AV=16. Used for per-stage TX diagnostics
    // to localize where the signal is dropping.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double GetTXAMeter(int channel, int mt);

    // FFTW wisdom: builds or loads cached plans from `directory/wdspWisdom00`.
    // Returns 0 if plans were loaded from file (fast), 1 if newly built and
    // saved (slow — FFTW_PATIENT runs sizes 64..262144). Must be called once
    // before the first OpenChannel so FFTW reuses the cached plans instead of
    // re-planning cold on every launch.
    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int WDSPwisdom(string directory);

    // Returns a pointer into a static 128-byte buffer written by the last
    // WDSPwisdom call (e.g. "Wisdom already existed" / "Wisdom created").
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial IntPtr wisdom_get_status();

    // -- PureSignal (predistortion). Lives inside the TXA channel via
    //    create_calcc / create_iqc (TXA.c:405,424). Symbol set verified
    //    against native/wdsp/wdsp.h. The mox/solidmox args to psccF are
    //    documented as ignored — drive MOX state through SetPSMox instead
    //    (calcc.c:846).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSControl(int channel, int reset, int mancal, int automode, int turnon);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSRunCal(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSMox(int channel, int mox);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSFeedbackRate(int channel, int rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSHWPeak(int channel, double peak);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSPtol(int channel, double ptol);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSPinMode(int channel, int pin);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSMapMode(int channel, int map);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSStabilize(int channel, int stbl);

    // SetPSIntsAndSpi is a heavy restart, not a setter (calcc.c:1132-1151).
    // Only safe to call when not actively calibrating.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSIntsAndSpi(int channel, int ints, int spi);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSMoxDelay(int channel, double delay);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetPSLoopDelay(int channel, double delay);

    // Returns the actual delay applied (clamped). pihpsdr stores the return.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial double SetPSTXDelay(int channel, double delay);

    // info[16]: state-machine snapshot. Caller passes a pinned int[16].
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetPSInfo(int channel, IntPtr info);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetPSMaxTX(int channel, out double maxtx);

    // pscc float variant (calcc.c:840). Feed paired TX-modulator IQ + RX
    // feedback IQ. Block size is 1024 complex samples per pihpsdr's
    // receiver.c:636. mox/solidmox are dead args — pass 0/0.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void psccF(int channel, int size,
                                       float[] Itxbuff, float[] Qtxbuff,
                                       float[] Irxbuff, float[] Qrxbuff,
                                       int mox, int solidmox);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void PSSaveCorr(int channel, string filename);

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void PSRestoreCorr(int channel, string filename);
}
